--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
+  DC has this philosophy that we are who we truly are when we act behind masks. I strongly encourage you to not use your real name.
   <div class="field">
     <%= f.label :username %><br />
     <%= f.text_field :username, autofocus: true %>
