--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Posts</h1>
+<h1>Top Posts</h1>
 <%= will_paginate @posts %><br/>
 <%= render partial: 'posts/post_list', locals: {posts: @posts} %><br/>
 <%= will_paginate @posts %>
