--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class='form-group'>
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
   <div class='form-group'>
     <%= f.label :body %>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: 'form-control' %>
   </div>
   <div class='form-group'>
     <%= f.label :public %>
@@ -28,6 +28,6 @@
     <% end %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Posts", class: 'btn btn-default' %>
   </div>
 <% end %>
