--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -13,13 +13,13 @@
 
   <div class='form-group'>
     <%= f.label :name %>
-    <%= f.text_field :name, autofocus: true %>
+    <%= f.text_field :name, autofocus: true, class: 'form-control' %>
   </div>
   <div class='form-group'>
     <%= f.label :public %>
     <%= f.check_box :public %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Topic", class: 'btn btn-default' %>
   </div>
 <% end %>
