--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,8 @@
             </div>
           <% else %>
             <div class='pull-right user-info'>
-              <a type="button" data-toggle="modal" data-target=".log-in">Log In</a> or 
-              <a type="button" data-toggle="modal" data-target=".sign-up">Sign Up</a>
-
+              <button type="button" data-toggle="modal" data-target=".log-in" class='btn btn-link'>Log In</button> or 
+              <button type="button" data-toggle="modal" data-target=".sign-up" class='btn btn-link'>Sign Up</button>
             </div>
           <% end %>
         </div>
