fixed up root page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,7 +48,7 @@
 
 body {
   background-color: #C0C0C0;
-  padding-top: 70px;
+  padding-top: 4.4em;
 }
 
 .search-bar {
@@ -102,4 +102,18 @@ body {
 
 .modal-content {
   padding: 3em;
+}
+
+.intro {
+  width: 100%;
+  height: 57em;
+  text-align: center;
+  padding: 10em;
+}
+
+.intro0 {
+  width: 100%;
+  height: 52em;
+  text-align: center;
+  padding: 10em;
 }
