--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,21 @@
-<h1>Welcome!</h1>
-<%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-default' %>
-<%= link_to "Sign In", new_user_session_path, class: 'btn btn-default' %><br/>
-Just a simple journaling app where you can easily organize your thoughts and share them with others.
+</div>
+<div class='intro0' style='background-color:#C0C0C0'>
+<h1 style='color: #080808'>Just a simple journaling app where you can easily organize your thoughts and share them with others.</h1><br/><br/><br/><br/><br/>
+<p>picture of a journal</p>
+</div>
+
+<div class='intro' style='background-color:#888888'>
+<h1 style='color:#484848'>Organize by categories</h1><br/><br/><br/><br/><br/>
+<p>picture of tabs or something</p>
+</div>
+
+<div class='intro' style='background-color:#484848'>
+<h1 style='color:#888888'>Easily choose whether you want others to see it or not</h1><br/><br/><br/><br/><br/>
+<p>picture of a checkbox next to 'public?'</p>
+</div>
+
+<div style='background-color:#080808' class='intro'>
+<h1 style='color:#C8C8C8'>Everything is backed up in the cloud so you can take it with you and never lose it again.</h1><br/><br/><br/><br/><br/>
+<p>picture of a backup servers inside a cloud</p>
+</div>
+<div class='container'>
