--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_area :body, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit "Submit", class: 'btn btn success' %>
+    <%= f.submit "Submit", class: 'btn btn-success' %>
   </div>
 <% end %>
