--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -28,6 +28,6 @@
     <% end %>
   </div>
   <div class="actions">
-    <%= f.submit "Create Posts", class: 'btn btn-default' %>
+    <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
 <% end %>
