--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -16,10 +16,14 @@
     <%= f.text_field :name, autofocus: true, class: 'form-control' %>
   </div>
   <div class='form-group'>
+    <%= f.label :desriptoin %>
+    <%= f.text_area :description, class: 'form-control' %>
+  </div>
+  <div class='form-group'>
     <%= f.label :public %>
     <%= f.check_box :public %>
   </div>
   <div class="actions">
-    <%= f.submit "Create Topic", class: 'btn btn-default' %>
+    <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
 <% end %>
