--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,7 @@
         <% if current_user == @user %>
           Public: <%= @post.public %><br />
           <%= link_to 'Edit', edit_topic_post_path(@topic, @post), class: 'btn btn-primary' %>
+          <%= link_to 'Delete', topic_post_path(@topic, @post), method: :delete, class: 'btn btn-danger', data: {confirm: "Delete Post?"} %>
         <% end %><br/>
       </div>
 
