--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class='form-group'>
     <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
+    <%= f.text_field :title, class: 'form-control', autofocus: true %>
   </div>
   <div class='form-group'>
     <%= f.label :body %>
